2004-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h: Disabled use of Windows message lookups
	entirely since this doesn't seem to work for programs.  It
	probably only works for DLLs like ImageMagickObject.
	* magick/delegate.c (ListDelegateInfo): Don't get stuck in a loop
	if fprintf() returns zero.

2004-04-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/*/*.bat: Add .exe to exe file names in order to
	ensure that the executable is executed rather than something else
	(such as a batch script).
	* magick/locale.c: Only use Windows resource message lookup for
	the DLL build since it doesn't seem to work for static
	executables.
	* magick/utility.c (SetClientPath): Ensure that client path is
	null terminated.
	(SetClientFilename): Initialize default client filename to ""
	rather than "gm.exe" and ensure that filename is null terminated.
	(SetClientName): Ensure that client path is null terminated.
	* magick/blob.c (GetConfigureBlob): Enable logging the load of
	log.mgk
	* magick/log.c: Re-designed logging initialization in order to
	avoid the "chicken and the egg" snafu.  This allows logging the
	initialization of the logging subsystem.

2004-04-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/bin/log.mgk: Add comments to help document usage.
	* config/log.mgk: Add comments to help document usage.
	* magick/utility.c (IsAccessible): Use access() rather than stat().
	(IsAccessibleNoLogging): Use access() rather than stat().
	(IsDirectory): Implemented return status according to existing API
	documentation.
	(GetExecutionPathUsingName): Complete re-write in order to minimize
	path computation logic and fix failure with partial paths.

2004-03-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Add "Color" to the arguments available for -list.

2004-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (PACKAGE_CHANGE_DATE): Updated version to 1.1Beta3