@@ -6,7 +6,7 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 7  (Solaris Sparc)">
 	<META NAME="CREATED" CONTENT="20020718;11000900">
 	<META NAME="CHANGEDBY" CONTENT="Robert Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20040325;23113700">
+	<META NAME="CHANGED" CONTENT="20040404;16592000">
 	<META NAME="DESCRIPTION" CONTENT="GraphicsMagick is a robust collection of tools and libraries to read, write, and manipulate an image in any of the more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.  With GraphicsMagick you can create GIFs dynamically making it suitable for Web applications.  You can also resize, rotate, sharpen, color reduce, or add special effects to an image and save your completed work in the same or differing image format.">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, Image Magick, Image Magic, PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic, WebMagick, Web Magic, visualization, image processing, software development, simulation, image, software, AniMagick, Animagic,  Magick++">
 	<STYLE>
@@ -28,7 +28,7 @@
 		<COL WIDTH=48*>
 		<TR>
 			<TD WIDTH=81%>
-				<P ALIGN=LEFT>[<A HREF="">Home</A>] [<A HREF="www/mission.html">Mission
+				<P ALIGN=LEFT>[<A HREF="../GraphicsMagick-1.1">Home</A>] [<A HREF="www/mission.html">Mission
 				Statement</A>] [<A HREF="www/development.html">Development
 				Process</A>] [<A HREF="www/contribute.html">Contribute</A>]
 				[<A HREF="www/download.html">Download</A>] [<A HREF="www/install.html">Installation</A>]
@@ -59,7 +59,7 @@
 	<COL WIDTH=182*>
 	<TR VALIGN=TOP>
 		<TD WIDTH=29%>
-			<P><FONT SIZE=3><I><SPAN STYLE="background: transparent">Latest
+			<P><FONT SIZE=3><I><SPAN STYLE="background: transparent">Last
 			Stable Release:</SPAN></I></FONT></P>
 		</TD>
 		<TD WIDTH=71%>
@@ -69,14 +69,13 @@
 	</TR>
 	<TR VALIGN=TOP>
 		<TD WIDTH=29%>
-			<P><FONT SIZE=3><I><SPAN STYLE="background: transparent">Next
-			Major Release: </SPAN></I></FONT>
+			<P><FONT SIZE=3><I><SPAN STYLE="background: transparent">Current
+			Release: </SPAN></I></FONT>
 			</P>
 		</TD>
 		<TD WIDTH=71%>
-			<P><SPAN STYLE="background: transparent"><I><FONT SIZE=3>1.1
-			(<A HREF="ftp://ftp.graphicsmagick.org/pub/GraphicsMagick/beta/README.html">currently
-			in Beta</A>)</FONT></I></SPAN></P>
+			<P ALIGN=LEFT><SPAN STYLE="background: transparent"><I><FONT SIZE=3>1.1
+			(Released April 4, 2004)</FONT></I></SPAN></P>
 		</TD>
 	</TR>
 </TABLE>
