@@ -56,6 +56,7 @@
 2004-04-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> version.sh (PACKAGE_VERSION): Release version 1.1.
   <LI> magick/studio.h: Disabled use of Windows message lookups
         entirely since this doesn't seem to work for programs.  It
         probably only works for DLLs like ImageMagickObject.
