@@ -1,5 +1,6 @@
 2004-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* version.sh (PACKAGE_VERSION): Release version 1.1.
 	* magick/studio.h: Disabled use of Windows message lookups
 	entirely since this doesn't seem to work for programs.  It
 	probably only works for DLLs like ImageMagickObject.
